--- a/webpage/stylesheets/sass/components/_header.scss
+++ b/webpage/stylesheets/sass/components/_header.scss
@@ -5,5 +5,15 @@ header {
   height: 33px;
   padding: 5px 0;
 
+  display: flex;
+  justify-content: center;
+
   background-color: #584C4F;
+
+  #header-content{
+    width: 860px;
+    height: 100%;
+
+    background-color: #ccc;
+  }
 }
