--- a/webpage/stylesheets/sass/components/_header.scss
+++ b/webpage/stylesheets/sass/components/_header.scss
@@ -10,10 +10,21 @@ header {
 
   background-color: #584C4F;
 
-  #header-content{
+  #header-content {
     width: 860px;
     height: 100%;
 
-    background-color: #ccc;
-  }
-}
+    display: flex;
+    justify-content: space-between;
+
+    #header-content-left {
+      width: 400px;
+      height: 100%;
+    }
+
+    #header-content-right {
+      width: 100px;
+      height: 100%;
+    }
+  } //header-content
+} //header
