--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -89,6 +89,11 @@ body {
   font-feature-settings: "lnum";
 }
 
+header #header-content #header-content-left ul li {
+  cursor: pointer;
+  user-select: none;
+}
+
 header {
   width: 100vw;
   height: 33px;
@@ -110,7 +115,25 @@ header #header-content #header-content-left {
   height: 100%;
 }
 
+header #header-content #header-content-left ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+header #header-content #header-content-left ul li {
+  padding: 8px;
+}
+
 header #header-content #header-content-right {
   width: 100px;
   height: 100%;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  font-family: "Helvetica Neue", Helvetica, arial, freesans, clean, sans-serif;
+  font-size: 100%;
+  color: #EfE8E1;
+  background-color: #333233;
 }
