--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -98,6 +98,7 @@ header {
   width: 100vw;
   height: 33px;
   padding: 5px 0;
+  font-size: .89em;
   display: flex;
   justify-content: center;
   background-color: #584C4F;
@@ -111,17 +112,25 @@ header #header-content {
 }
 
 header #header-content #header-content-left {
-  width: 400px;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 header #header-content #header-content-left ul {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 header #header-content #header-content-left ul li {
   padding: 8px;
+  transition: .3S;
+}
+
+header #header-content #header-content-left ul li:hover {
+  color: #81BF8C;
+  transition: .3S;
 }
 
 header #header-content #header-content-right {
