--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -89,7 +89,7 @@ body {
   font-feature-settings: "lnum";
 }
 
-header #header-content #header-content-left ul li {
+header #header-content #header-content-left ul li, header #header-content #header-content-right ul li {
   cursor: pointer;
   user-select: none;
 }
@@ -125,17 +125,39 @@ header #header-content #header-content-left ul {
 
 header #header-content #header-content-left ul li {
   padding: 8px;
-  transition: .3S;
+  transition: 0.3s;
 }
 
 header #header-content #header-content-left ul li:hover {
   color: #81BF8C;
-  transition: .3S;
+  transition: 0.3s;
 }
 
 header #header-content #header-content-right {
-  width: 100px;
   height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+header #header-content #header-content-right ul {
+  width: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header #header-content #header-content-right ul li {
+  transition: 0.3s;
+}
+
+header #header-content #header-content-right ul li:hover {
+  color: #81BF8C;
+  transition: 0.3s;
+}
+
+header #header-content #header-content-right ul li img {
+  position: relative;
+  top: 2px;
 }
 
 body {
