--- a/webpage/stylesheets/sass/components/_header.scss
+++ b/webpage/stylesheets/sass/components/_header.scss
@@ -1,3 +1,8 @@
+//VARS
+
+$hover-transition-time: .3s;
+$hover-color: #81BF8C;
+
 // *** HEADER PARTIAL ***
 
 header {
@@ -33,19 +38,41 @@ header {
           padding: 8px;
 
           @extend %fake-link;
-          transition: .3S;
+          transition: $hover-transition-time;
 
           &:hover{
-            color: #81BF8C;
-            transition: .3S;
+            color: $hover-color;
+            transition: $hover-transition-time;
           }
         }//li
       }//ul
     }//header-content-left
 
     #header-content-right {
-      width: 100px;
       height: 100%;
-    }
+      display: flex;
+      align-items: center;
+
+      ul{
+        width: 67px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        li{
+          @extend %fake-link;
+          transition: $hover-transition-time;
+
+          &:hover{
+            color: $hover-color;
+            transition: $hover-transition-time;
+          } //hover
+
+          img{
+            position: relative;
+            top: 2px;
+          }
+        } //li
+      } //ul
+    } //header-content-right
   } //header-content
 } //header
