--- a/webpage/stylesheets/sass/components/_header.scss
+++ b/webpage/stylesheets/sass/components/_header.scss
@@ -18,7 +18,7 @@ header {
   background-color: #584C4F;
 
   #header-content {
-    width: 860px;
+    width: $content-width;
     height: 100%;
 
     display: flex;
