--- a/webpage/stylesheets/sass/components/_hero.scss
+++ b/webpage/stylesheets/sass/components/_hero.scss
@@ -1,1 +1,10 @@
 // *** HERO PARTIAL ***
+#hero {
+  width: 100vw;
+
+  #hero-content{
+    width: $content-width;
+    height: 25px;
+    background-color: #CCC;
+  }//hero-content
+}//hero
