--- a/webpage/stylesheets/sass/components/_hero.scss
+++ b/webpage/stylesheets/sass/components/_hero.scss
@@ -29,9 +29,25 @@ $border-style: 1px solid #4E4B4D;
           border: $border-style;
           border-radius: 20px;
           li{
+
             height: 25%;
             width: 100%;
             border-bottom: $border-style;
+            @include basic-flex(center, center);
+            flex-direction: column;
+
+            h1{
+              font-size: 1.4em;
+              font-weight: 500;
+              color: #EED9B7;
+              margin-bottom: .4em;
+            }
+
+            span{
+              font-size: .9em;
+              color: #EED9B788;
+              // opacity: .5;
+            }
 
             &:last-child{
               border-bottom: none;
