--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -218,6 +218,43 @@ header #header-content #header-content-right ul li img {
   color: #EED9B788;
 }
 
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li span a:hover {
+  color: #EBAB00;
+}
+
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li a {
+  height: 65%;
+  width: 80%;
+  margin-bottom: 2px;
+}
+
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li a div {
+  height: 100%;
+  width: 100%;
+  background-color: #FED153;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li a div img {
+  height: 16px;
+  width: 14px;
+  margin: 2px 10px 0 0;
+}
+
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li a div p {
+  color: #333233;
+  font-weight: 500;
+  font-size: 1.1em;
+  letter-spacing: .03em;
+}
+
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li a div:hover {
+  background-color: #EBAB00;
+}
+
 #hero #hero-content #hero-content-top #hero-content-top-ul ul li:last-child {
   border-bottom: none;
 }
@@ -229,4 +266,13 @@ body {
   font-size: 100%;
   color: #EfE8E1;
   background-color: #333233;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
 }
