finished sub-hero

--- a/webpage/stylesheets/sass/components/_vars.scss
+++ b/webpage/stylesheets/sass/components/_vars.scss
@@ -4,3 +4,5 @@ $content-width: 860px;
 // Be careful about going anything below 860px
 
 $body-color: #333233;
+$border-style: 1px solid #4E4B4D;
+$hover-color: #EBAB00;
