--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -165,6 +165,7 @@ header #header-content #header-content-right ul li img {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  flex-direction: row;
 }
 
 #hero #hero-content {
@@ -176,6 +177,7 @@ header #header-content #header-content-right ul li img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
 }
 
 #hero #hero-content #hero-content-top #hero-content-top-ani {
@@ -236,6 +238,7 @@ header #header-content #header-content-right ul li img {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
 }
 
 #hero #hero-content #hero-content-top #hero-content-top-ul ul li a div img {
@@ -265,6 +268,7 @@ header #header-content #header-content-right ul li img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 50px;
 }
 
 #hero #hero-content #hero-content-bottom p {
@@ -286,6 +290,7 @@ header #header-content #header-content-right ul li img {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
 }
 
 #hero #hero-content #hero-content-bottom ul li {
@@ -298,6 +303,55 @@ header #header-content #header-content-right ul li img {
 }
 
 #hero #hero-content #hero-content-bottom ul li a:hover {
+  color: #EBAB00;
+}
+
+#sub-hero {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 100px;
+}
+
+#sub-hero #sub-hero-content {
+  width: 860px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#sub-hero #sub-hero-content h1 {
+  font-size: 2.3em;
+  font-weight: 300;
+  letter-spacing: .025em;
+  color: #EFDAB9;
+}
+
+#sub-hero #sub-hero-content h1 span {
+  color: #78B0A0;
+}
+
+#sub-hero #sub-hero-content ul {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+#sub-hero #sub-hero-content ul li {
+  margin: 40px 10px 0 10px;
+  padding: 1% 1.5%;
+  border: 1px solid #4E4B4D;
+  border-radius: 5px;
+  color: #FFD152;
+  font-size: 1.15em;
+}
+
+#sub-hero #sub-hero-content ul li:hover {
   color: #EBAB00;
 }
 
