--- a/webpage/stylesheets/sass/components/_hero.scss
+++ b/webpage/stylesheets/sass/components/_hero.scss
@@ -1,9 +1,5 @@
-//LOCAL VARIABLES
-
-$border-style: 1px solid #4E4B4D;
-$hover-color: #EBAB00;
-
 // *** HERO PARTIAL ***
+
 #hero {
   width: 100vw;
   @include basic-flex();
@@ -35,8 +31,8 @@ $hover-color: #EBAB00;
             height: 25%;
             width: 100%;
             border-bottom: $border-style;
-            @include basic-flex(center, center);
-            flex-direction: column;
+            @include basic-flex(center, center, column);
+
 
             h1{
               font-size: 1.4em;
@@ -97,8 +93,8 @@ $hover-color: #EBAB00;
 
     #hero-content-bottom{
       width: 100%;
-      @include basic-flex(center, center);
-      flex-direction: column;
+      @include basic-flex(center, center, column);
+      margin-top: 50px;
 
       p{
         color: #766E63AA;
