--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -344,7 +344,7 @@ header #header-content #header-content-right ul li img {
 
 #sub-hero #sub-hero-content ul li {
   margin: 40px 10px 0 10px;
-  padding: 1% 1.5%;
+  padding: 8px 14px;
   border: 1px solid #4E4B4D;
   border-radius: 5px;
   color: #FFD152;
@@ -357,6 +357,9 @@ header #header-content #header-content-right ul li img {
 
 footer {
   width: 100vw;
+  padding: 205px 0px;
+  background-color: #2C2A2B;
+  border-top: 1px solid #1A191A;
   display: flex;
   justify-content: center;
   align-items: center;
