--- a/webpage/stylesheets/sass/components/_sub-hero.scss
+++ b/webpage/stylesheets/sass/components/_sub-hero.scss
@@ -26,7 +26,7 @@
 
       li{
         margin: 40px 10px 0 10px;
-        padding: 1% 1.5%;
+        padding: 8px 14px;
         border: $border-style;
         border-radius: 5px;
         color: #FFD152;
