--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -358,7 +358,8 @@ header #header-content #header-content-right ul li img {
 footer {
   width: 100vw;
   padding: 205px 0px;
-  background-color: #2C2A2B;
+  background: url("media/imgs/atom-rocket.svg") no-repeat #2C2A2B;
+  background-position: calc(50% + 380px) 60px;
   border-top: 1px solid #1A191A;
   display: flex;
   justify-content: center;
