--- a/webpage/stylesheets/sass/components/_footer.scss
+++ b/webpage/stylesheets/sass/components/_footer.scss
@@ -3,10 +3,14 @@
 footer{
   width: 100vw;
   padding: 205px 0px;
-  background-color: #2C2A2B;
+
+
+  background: url('media/imgs/atom-rocket.svg') no-repeat #2C2A2B;
+  background-position: calc(50% + 380px) 60px;
+
   border-top: 1px solid #1A191A;
   @include basic-flex(center, center);
-  
+
   #footer-content{
     width: $content-width;
     @include basic-flex(center, center);
