finished footer content left

--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -370,9 +370,37 @@ footer {
 footer #footer-content {
   width: 860px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: row;
+}
+
+footer #footer-content #footer-content-left {
+  width: 50%;
+  height: 295px;
+  padding-right: 75px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+footer #footer-content #footer-content-left div {
+  width: fit-content;
+  color: #333233;
+  padding: 8px 16px;
+  background-color: #FED153;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
+footer #footer-content #footer-content-left div:hover {
+  background-color: #EBAB00;
+}
+
+footer #footer-content #footer-content-right {
+  width: 50%;
 }
 
 body {
@@ -391,4 +419,16 @@ a {
 
 a:hover {
   text-decoration: none;
+}
+
+p {
+  color: #EFDAB9;
+  line-height: 1.45em;
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: 200;
+  color: #EFDAB9;
+  letter-spacing: .05em;
 }
