--- a/webpage/stylesheets/sass/master.scss
+++ b/webpage/stylesheets/sass/master.scss
@@ -32,3 +32,15 @@ a{
    text-decoration: none;
   }
 }
+
+p{
+  color: $atom-tan;
+  line-height: 1.45em;
+}
+
+h2{
+  font-size: 2em;
+  font-weight: 200;
+  color: $atom-tan;
+  letter-spacing: .05em;
+}
