--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -357,7 +357,7 @@ header #header-content #header-content-right ul li img {
 
 footer {
   width: 100vw;
-  padding: 205px 0px;
+  padding: 210px 0px;
   background: url("media/imgs/atom-rocket.svg") no-repeat #2C2A2B;
   background-position: calc(50% + 380px) 60px;
   border-top: 1px solid #1A191A;
@@ -371,14 +371,14 @@ footer #footer-content {
   width: 860px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
 }
 
 footer #footer-content #footer-content-left {
   width: 50%;
-  height: 295px;
-  padding-right: 80px;
+  height: 275px;
+  padding: 20px 100px 0 0;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -401,8 +401,8 @@ footer #footer-content #footer-content-left div:hover {
 
 footer #footer-content #footer-content-right {
   width: 50%;
-  height: 295px;
-  padding-left: 80px;
+  height: 285px;
+  padding: 20px 0 0 100px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -419,7 +419,7 @@ footer #footer-content #footer-content-right #footer-content-right-uls {
 
 footer #footer-content #footer-content-right #footer-content-right-uls ul {
   line-height: 1.7em;
-  padding-bottom: 23px;
+  padding-bottom: 35px;
 }
 
 footer #footer-content #footer-content-right #footer-content-right-uls ul li {
@@ -435,6 +435,42 @@ footer #footer-content #footer-content-right #footer-content-right-uls ul a {
 
 footer #footer-content #footer-content-right #footer-content-right-uls ul a:hover {
   color: #EBAB00;
+}
+
+#sub-footer {
+  height: 55px;
+  width: 100vw;
+  background-color: #EFEAE1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+#sub-footer #sub-footer-content {
+  height: 55px;
+  width: 860px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+#sub-footer #sub-footer-content #sub-footer-content-left ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+#sub-footer #sub-footer-content #sub-footer-content-left ul li a {
+  color: #574c4f;
+  padding-right: 19px;
+  font-size: 16px;
+}
+
+#sub-footer #sub-footer-content #sub-footer-content-right img {
+  padding-top: 3px;
 }
 
 body {
