--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -247,7 +247,7 @@ header #header-content #header-content-right ul li img {
   margin: 2px 10px 0 0;
 }
 
-#hero #hero-content #hero-content-top #hero-content-top-ul ul li a div p {
+#hero #hero-content #hero-content-top #hero-content-top-ul ul li a div span {
   color: #333233;
   font-weight: 500;
   font-size: 1.1em;
@@ -353,6 +353,94 @@ header #header-content #header-content-right ul li img {
 
 #sub-hero #sub-hero-content ul li:hover {
   color: #EBAB00;
+}
+
+#sub-features {
+  width: 100vw;
+  padding: 210px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+#sub-features #sub-features-content {
+  width: 860px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#sub-features #sub-features-content #sub-features-expectations {
+  width: 100%;
+}
+
+#sub-features #sub-features-content #sub-features-expectations h2 {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 50px;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid {
+  width: 100%;
+  display: grid;
+  grid-template: repeat(3, 1fr)/repeat(2, 1fr);
+  grid-gap: 100px 66.66667px;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(1) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url("media/imgs/sf1.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(2) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url("media/imgs/sf2.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(3) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url("media/imgs/sf3.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(4) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url("media/imgs/sf4.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(5) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url("media/imgs/sf5.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(6) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url("media/imgs/sf6.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
 }
 
 footer {
@@ -494,6 +582,9 @@ a:hover {
 p {
   color: #EFDAB9;
   line-height: 1.45em;
+  margin: 16px 0;
+  width: 350px;
+  letter-spacing: 0.02em;
 }
 
 h2 {
@@ -501,4 +592,11 @@ h2 {
   font-weight: 200;
   color: #EFDAB9;
   letter-spacing: .05em;
+}
+
+h4 {
+  font-size: 1.2em;
+  color: #EFDAB9;
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
