--- a/webpage/stylesheets/sass/components/_mixins.scss
+++ b/webpage/stylesheets/sass/components/_mixins.scss
@@ -6,3 +6,12 @@
   align-items: $ai;
   flex-direction: $fd;
 }
+
+@mixin grid-item($img-file) {
+  width: 100%;
+  height: 80px;
+  padding-left: 60px;
+  background: url('media/imgs/#{$img-file}') no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
