--- a/webpage/stylesheets/sass/master.scss
+++ b/webpage/stylesheets/sass/master.scss
@@ -10,6 +10,7 @@
 @import "components/header";
 @import "components/hero";
 @import "components/sub-hero";
+@import "components/sub-features";
 @import "components/footer";
 @import "components/sub-footer";
 // --- MASTER CONTROLS ---
@@ -37,6 +38,9 @@ a{
 p{
   color: $atom-tan;
   line-height: 1.45em;
+  margin: 16px 0;
+  width: 350px;
+  letter-spacing: 0.02em;
 }
 
 h2{
@@ -44,4 +48,11 @@ h2{
   font-weight: 200;
   color: $atom-tan;
   letter-spacing: .05em;
+}
+
+h4{
+  font-size: 1.2em;
+  color: $atom-tan;
+  font-weight: 500;
+  letter-spacing: 0.02em;
 }
