--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -364,6 +364,14 @@ header #header-content #header-content-right ul li img {
   flex-direction: row;
 }
 
+#sub-features a {
+  color: #FED153;
+}
+
+#sub-features a:hover {
+  color: #EBAB00;
+}
+
 #sub-features #sub-features-content {
   width: 860px;
   display: flex;
@@ -386,12 +394,12 @@ header #header-content #header-content-right ul li img {
   width: 100%;
   display: grid;
   grid-template: repeat(3, 1fr)/repeat(2, 1fr);
-  grid-gap: 100px 66.66667px;
+  grid-gap: 100px 5%;
 }
 
 #sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(1) {
   width: 100%;
-  height: 80px;
+  height: auto;
   padding-left: 60px;
   background: url("media/imgs/sf1.png") no-repeat;
   background-position: left top;
@@ -400,7 +408,7 @@ header #header-content #header-content-right ul li img {
 
 #sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(2) {
   width: 100%;
-  height: 80px;
+  height: auto;
   padding-left: 60px;
   background: url("media/imgs/sf2.png") no-repeat;
   background-position: left top;
@@ -409,7 +417,7 @@ header #header-content #header-content-right ul li img {
 
 #sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(3) {
   width: 100%;
-  height: 80px;
+  height: auto;
   padding-left: 60px;
   background: url("media/imgs/sf3.png") no-repeat;
   background-position: left top;
@@ -418,7 +426,7 @@ header #header-content #header-content-right ul li img {
 
 #sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(4) {
   width: 100%;
-  height: 80px;
+  height: auto;
   padding-left: 60px;
   background: url("media/imgs/sf4.png") no-repeat;
   background-position: left top;
@@ -427,7 +435,7 @@ header #header-content #header-content-right ul li img {
 
 #sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(5) {
   width: 100%;
-  height: 80px;
+  height: auto;
   padding-left: 60px;
   background: url("media/imgs/sf5.png") no-repeat;
   background-position: left top;
@@ -436,9 +444,63 @@ header #header-content #header-content-right ul li img {
 
 #sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(6) {
   width: 100%;
-  height: 80px;
+  height: auto;
   padding-left: 60px;
   background: url("media/imgs/sf6.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-customize {
+  width: 100%;
+}
+
+#sub-features #sub-features-content #sub-features-customize h2 {
+  width: 100%;
+  text-align: left;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+#sub-features #sub-features-content #sub-features-customize #customize-grid {
+  width: 100%;
+  display: grid;
+  grid-template: repeat(2, 1fr)/repeat(2, 1fr);
+  grid-gap: 100px 5%;
+}
+
+#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(1) {
+  width: 100%;
+  height: auto;
+  padding-left: 60px;
+  background: url("media/imgs/sf7.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(2) {
+  width: 100%;
+  height: auto;
+  padding-left: 60px;
+  background: url("media/imgs/sf8.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(3) {
+  width: 100%;
+  height: auto;
+  padding-left: 60px;
+  background: url("media/imgs/sf9.png") no-repeat;
+  background-position: left top;
+  background-size: 8%;
+}
+
+#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(4) {
+  width: 100%;
+  height: auto;
+  padding-left: 60px;
+  background: url("media/imgs/sf10.png") no-repeat;
   background-position: left top;
   background-size: 8%;
 }
