--- a/webpage/stylesheets/sass/components/_sub-features.scss
+++ b/webpage/stylesheets/sass/components/_sub-features.scss
@@ -1,9 +1,23 @@
+//LOCAL VARIABLES
+
+$row-gap: 100px;
+$column-gap: 5%;
+
 // *** SUB FEATURES PARTIAL ***
 
 #sub-features{
   width: 100vw;
   padding: 210px 0;
   @include basic-flex(center, center);
+
+  a{
+    color: $button-color;
+
+    &:hover{
+      color: $hover-color;
+    }
+  }
+
   #sub-features-content{
     width: $content-width;
     @include basic-flex(center, center, column);
@@ -21,7 +35,7 @@
         width: 100%;
         display: grid;
         grid-template: repeat(3, 1fr) / repeat(2, 1fr);
-        grid-gap: 100px 66.66667px;
+        grid-gap: $row-gap $column-gap;
 
         div:nth-child(1){
           @include grid-item('sf1.png');
@@ -48,5 +62,39 @@
         }
       }//expectations-grid
     }//sub-features-expectations
+
+    #sub-features-customize{
+      width: 100%;
+
+      h2{
+        width: 100%;
+        text-align: left;
+        margin-top: 100px;
+        margin-bottom: 50px;
+      }//h2
+
+      #customize-grid{
+        width: 100%;
+        display: grid;
+        grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+        grid-gap: $row-gap $column-gap;
+
+        div:nth-child(1){
+          @include grid-item('sf7.png');
+        }
+
+        div:nth-child(2){
+          @include grid-item('sf8.png');
+        }
+
+        div:nth-child(3){
+          @include grid-item('sf9.png');
+        }
+
+        div:nth-child(4){
+          @include grid-item('sf10.png');
+        }
+      }//customize-grid
+    }// sub-features-customize
   }//sub-features-content
 }//sub-features
