--- a/webpage/stylesheets/sass/components/_sub-features.scss
+++ b/webpage/stylesheets/sass/components/_sub-features.scss
@@ -10,13 +10,7 @@ $column-gap: 5%;
   padding: 210px 0;
   @include basic-flex(center, center);
 
-  a{
-    color: $button-color;
-
-    &:hover{
-      color: $hover-color;
-    }
-  }
+  @extend %text-link;
 
   #sub-features-content{
     width: $content-width;
