--- a/webpage/stylesheets/sass/components/_footer.scss
+++ b/webpage/stylesheets/sass/components/_footer.scss
@@ -23,16 +23,7 @@ footer{
       @include basic-flex(space-between, flex-start, column);
 
       div{
-        width: fit-content;
-        color: $body-color;
-        padding: 8px 16px;
-        background-color: $button-color;
-        border-radius: $button-radius;
-        font-weight: 500;
-
-        &:hover{
-          background-color: $hover-color;
-        }
+        @extend %button;
       }//div
     }//footer-content-left
 
