--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -94,7 +94,7 @@ header #header-content #header-content-left ul li, header #header-content #heade
   user-select: none;
 }
 
-#feature-1 #feature-1-info div, footer #footer-content #footer-content-left div {
+.feature-info div, footer #footer-content #footer-content-left div {
   width: fit-content;
   color: #333233;
   padding: 12px 24px;
@@ -103,15 +103,15 @@ header #header-content #header-content-left ul li, header #header-content #heade
   font-weight: 500;
 }
 
-#feature-1 #feature-1-info div:hover, footer #footer-content #footer-content-left div:hover {
+.feature-info div:hover, footer #footer-content #footer-content-left div:hover {
   background-color: #EBAB00;
 }
 
-#feature-1 #feature-1-info a, #sub-features a {
+.feature-info a, #sub-features a {
   color: #FED153;
 }
 
-#feature-1 #feature-1-info a:hover, #sub-features a:hover {
+.feature-info a:hover, #sub-features a:hover {
   color: #EBAB00;
 }
 
@@ -377,16 +377,9 @@ header #header-content #header-content-right ul li img {
 }
 
 #feature-1 {
-  width: 100vw;
-  padding: 100px 0px;
-  margin: 50px 0px;
   background: url("media/imgs/teletype-bckr.svg") no-repeat;
   background-size: contain;
   background-position: calc(50% + 1000px) 0%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
 }
 
 #feature-1 #feature-1-img {
@@ -394,16 +387,7 @@ header #header-content #header-content-right ul li img {
 }
 
 #feature-1 #feature-1-img img {
-  position: relative;
-  left: -100px;
-  width: 780px;
-  height: 488px;
-  border-radius: 5px;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.5);
   filter: brightness(0.75) contrast(1) sepia(0.7) hue-rotate(-5deg) saturate(3);
-  transition: 2s;
-  transition-timing-function: ease;
-  transition-delay: 0s;
 }
 
 #feature-1 #feature-1-img img:hover {
@@ -411,8 +395,79 @@ header #header-content #header-content-right ul li img {
 }
 
 #feature-1 #feature-1-info {
-  height: 400px;
   padding-left: 35px;
+}
+
+#feature-2 {
+  background: url("media/imgs/atom-ide-bckr.svg") no-repeat;
+  background-size: auto 70%;
+  background-position: calc(-50% + 550px) center;
+}
+
+#feature-2 #feature-2-img {
+  width: 50%;
+}
+
+#feature-2 #feature-2-img img {
+  position: relative;
+  left: 45px;
+  filter: brightness(0.7) contrast(0.8) sepia(1) hue-rotate(160deg) saturate(2.5);
+}
+
+#feature-2 #feature-2-img img:hover {
+  filter: none;
+}
+
+#feature-2 #feature-2-info {
+  padding-left: 390px;
+}
+
+#feature-3 {
+  background: url("media/imgs/cat-moons.svg") no-repeat;
+  background-size: contain;
+  background-position: calc(90% + 160px) 0%;
+}
+
+#feature-3 #feature-3-img {
+  width: 50%;
+}
+
+#feature-3 #feature-3-img img {
+  filter: brightness(0.7) contrast(1) sepia(1) hue-rotate(115deg) saturate(1.5);
+}
+
+#feature-3 #feature-3-img img:hover {
+  filter: none;
+}
+
+#feature-3 #feature-3-info {
+  padding-left: 35px;
+}
+
+.feature-container {
+  width: 100vw;
+  padding: 100px 0px;
+  margin: 50px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.feature-img {
+  position: relative;
+  left: -100px;
+  width: 780px;
+  height: 488px;
+  border-radius: 5px;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.5);
+  transition: 2s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+}
+
+.feature-info {
+  height: 400px;
   width: 50%;
   display: flex;
   justify-content: space-between;
