created hero sub-partial

--- a/webpage/stylesheets/master.css
+++ b/webpage/stylesheets/master.css
@@ -204,7 +204,7 @@ header #header-content #header-content-right ul li img {
 #hero #hero-content #hero-content-top #hero-content-top-ani {
   width: 582px;
   height: 500px;
-  background-color: #2b2a2b;
+  background-color: #444;
 }
 
 #hero #hero-content #hero-content-top #hero-content-top-ul {
